# fetch

./: .gitignore  README.md
tamols/: CMakeLists.txt  constraints.py  costs.py  helpers.py  ignore_test.py  ignore_utils.py  manual_heightmaps.py  map_processing.py  plotting_helpers.py  snopt.out  tamols.py  test.py
tamols/examples/: simple_example.cc
tamols/include/tamols/: tamols_state.h
tamols/src/: tamols_state.cc
tamols/tests/: tamols_test.cc
